[gd_scene load_steps=4 format=3 uid="uid://c81upvc534ayg"]

[ext_resource type="Script" path="res://addons/Turn_Based_System/nodes/turn_based_agent/turn_based_agent.gd" id="1_62on4"]
[ext_resource type="Texture2D" uid="uid://d3fkdfjvneujr" path="res://addons/Turn_Based_System/assets/icons/Icon_Down.png" id="2_4ylcb"]
[ext_resource type="Texture2D" uid="uid://jvgay0s5alo6" path="res://addons/Turn_Based_System/assets/icons/Icon_Left.png" id="3_a8vvv"]

[node name="TurnBasedBattleAgent" type="Node"]
script = ExtResource("1_62on4")

[node name="onTurnIconNode" type="TextureRect" parent="."]
custom_minimum_size = Vector2(25, 25)
offset_left = -12.5
offset_top = -12.5
offset_right = 12.5
offset_bottom = 12.5
texture = ExtResource("2_4ylcb")
expand_mode = 1

[node name="targetIconNode" type="TextureRect" parent="."]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(25, 25)
offset_left = -12.5
offset_top = -12.5
offset_right = 12.5
offset_bottom = 12.5
texture = ExtResource("3_a8vvv")
expand_mode = 1
