[gd_scene load_steps=16 format=3 uid="uid://bojnuadillejy"]

[ext_resource type="PackedScene" uid="uid://b4la2yqdnumj5" path="res://addons/Turn_Based_System/nodes/turn_based_controller/turn_based_controller.tscn" id="2_08mpt"]
[ext_resource type="Texture2D" uid="uid://80nu5nqla587" path="res://addons/Turn_Based_System/test/2D/assets/83.png" id="2_tl5g6"]
[ext_resource type="Script" path="res://addons/Turn_Based_System/test/2D/character/character.gd" id="2_yehj6"]
[ext_resource type="Script" path="res://addons/Turn_Based_System/nodes/turn_based_agent/turn_based_agent.gd" id="4_hy2bi"]
[ext_resource type="PackedScene" uid="uid://csjsu65sx7iu5" path="res://addons/Turn_Based_System/scenes/classic/classic_command_menu/classic_command_menu.tscn" id="4_pl6x7"]
[ext_resource type="Resource" uid="uid://cwjljuoc83jn0" path="res://addons/Turn_Based_System/test/resource/enemy.tres" id="4_s0etk"]
[ext_resource type="Texture2D" uid="uid://sdtjd8j6r3ct" path="res://addons/Turn_Based_System/test/2D/assets/91.png" id="5_5tugo"]
[ext_resource type="Resource" uid="uid://ccq1ra2k8frfy" path="res://addons/Turn_Based_System/test/resource/player1.tres" id="5_jfnju"]
[ext_resource type="Resource" uid="uid://cudnqmq33tpnh" path="res://addons/Turn_Based_System/test/resource/player2.tres" id="6_2gvv6"]
[ext_resource type="Texture2D" uid="uid://bmlqrajokytar" path="res://addons/Turn_Based_System/test/2D/assets/99.png" id="6_kb8yp"]
[ext_resource type="Texture2D" uid="uid://bdbnbh1tbm1e3" path="res://addons/Turn_Based_System/test/2D/assets/87.png" id="7_50ei7"]
[ext_resource type="Texture2D" uid="uid://brstn62lvwmhj" path="res://addons/Turn_Based_System/test/2D/assets/42.png" id="9_nca4s"]
[ext_resource type="PackedScene" uid="uid://cv1rrda3groo5" path="res://addons/Turn_Based_System/scenes/classic/classic_turn_order_bar/classic_turn_order_bar.tscn" id="13_ka3q1"]
[ext_resource type="PackedScene" uid="uid://b6dd25yaobs1l" path="res://addons/Turn_Based_System/scenes/classic/classic_status_container/classic_player_status_container.tscn" id="14_ilk63"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmcke"]
size = Vector2(96, 96)

[node name="TestScene" type="Node2D"]

[node name="Enemy 1" type="StaticBody2D" parent="."]
position = Vector2(228, 126)
scale = Vector2(1.25, 1.25)
script = ExtResource("2_yehj6")
characterResource = ExtResource("4_s0etk")

[node name="Sprite2D" type="Sprite2D" parent="Enemy 1"]
texture = ExtResource("2_tl5g6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy 1"]
shape = SubResource("RectangleShape2D_tmcke")

[node name="TurnBasedAgent" type="Node" parent="Enemy 1"]
script = ExtResource("4_hy2bi")
character_type = 1
targetIconOffSet = Vector3(53.09, -9.2, 0)

[node name="Enemy 2" type="StaticBody2D" parent="."]
position = Vector2(541, 131)
scale = Vector2(1.25, 1.25)
script = ExtResource("2_yehj6")
characterResource = ExtResource("4_s0etk")

[node name="Sprite2D" type="Sprite2D" parent="Enemy 2"]
texture = ExtResource("5_5tugo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy 2"]
shape = SubResource("RectangleShape2D_tmcke")

[node name="TurnBasedAgent" type="Node" parent="Enemy 2"]
script = ExtResource("4_hy2bi")
character_type = 1
targetIconOffSet = Vector3(53.09, -9.355, 0)

[node name="Enemy 3" type="StaticBody2D" parent="."]
position = Vector2(823, 131)
scale = Vector2(1.25, 1.25)
script = ExtResource("2_yehj6")
characterResource = ExtResource("4_s0etk")

[node name="Sprite2D" type="Sprite2D" parent="Enemy 3"]
texture = ExtResource("6_kb8yp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy 3"]
shape = SubResource("RectangleShape2D_tmcke")

[node name="TurnBasedAgent" type="Node" parent="Enemy 3"]
script = ExtResource("4_hy2bi")
character_type = 1
targetIconOffSet = Vector3(53.09, -9.355, 0)

[node name="Player1" type="StaticBody2D" parent="."]
position = Vector2(344, 397)
scale = Vector2(1.25, 1.25)
script = ExtResource("2_yehj6")
characterResource = ExtResource("5_jfnju")

[node name="Sprite2D" type="Sprite2D" parent="Player1"]
texture = ExtResource("7_50ei7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
shape = SubResource("RectangleShape2D_tmcke")

[node name="TurnBasedAgent" type="Node" parent="Player1"]
script = ExtResource("4_hy2bi")
onTurnIconOffSet = Vector3(-11.295, -65.255, 0)
targetIconOffSet = Vector3(27.91, -9.355, 0)

[node name="Player2" type="StaticBody2D" parent="."]
position = Vector2(648, 404)
scale = Vector2(1.25, 1.25)
script = ExtResource("2_yehj6")
characterResource = ExtResource("6_2gvv6")

[node name="Sprite2D" type="Sprite2D" parent="Player2"]
texture = ExtResource("9_nca4s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
shape = SubResource("RectangleShape2D_tmcke")

[node name="TurnBasedAgent" type="Node" parent="Player2"]
script = ExtResource("4_hy2bi")
onTurnIconOffSet = Vector3(0, -65.255, 0)
targetIconOffSet = Vector3(40.27, -9.355, 0)

[node name="TurnBasedController" parent="." instance=ExtResource("2_08mpt")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ComandMenu" parent="CanvasLayer" instance=ExtResource("4_pl6x7")]
mainCommandButtonNames = Array[String](["Attack", "Skills", "Run"])

[node name="TurnOrderBar" parent="CanvasLayer" instance=ExtResource("13_ka3q1")]
offset_left = -151.0
offset_right = 49.0
offset_bottom = 600.0
scale = Vector2(0.75, 0.75)

[node name="ClassicStatusContainer" parent="CanvasLayer" instance=ExtResource("14_ilk63")]

[editable path="CanvasLayer/ComandMenu"]
